--- a/furni-css/style.css
+++ b/furni-css/style.css
@@ -896,6 +896,7 @@
 .work-product h3 {
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
+    margin-top: 10px;
 }
 
 .sum-prod {
@@ -903,6 +904,7 @@
     border-radius: 20px;
     padding: 5px 15px;
     color: red;
+    background-color: #f1f1f1;
     font-weight: 600;
 }
 
@@ -1234,10 +1236,12 @@ img.vert-move {
     border-radius: 15px;
     font-weight: 500;
     margin-bottom: 15px;
+    background-color: #f1f1f1;
 }
 
 .collect-btn h1 {
     font-family: "Rubik", sans-serif;
+    margin-top: 10px;
 }
 
 .collect-btn p {
@@ -1337,6 +1341,7 @@ img.vert-move {
 
 .customer-say h1 {
     font-family: "Rubik", sans-serif;
+    margin-top: 10px;
 }
 
 .customer-say p {
