--- a/furni-css/style.css
+++ b/furni-css/style.css
@@ -1461,6 +1461,7 @@ img.vert-move {
     color: white;
     padding: 40px;
     gap: 10px;
+    align-items: center;
 }
 
 @media screen and (max-width: 767px) {
