--- a/furni-css/style.css
+++ b/furni-css/style.css
@@ -1501,6 +1501,11 @@ img.vert-move {
 }
 .furni-category a {
     color: black;
+    transition: all 0.3s ease;
+    /* text-decoration: none; */
+}
+.furni-category a:hover{
+    transform: scale(1.0);
 }
 .furni-category p {
     margin: 0;
