--- a/furni-css/style.css
+++ b/furni-css/style.css
@@ -234,6 +234,7 @@
 }
 .online-feb-ins a:hover {
     color: white;
+    box-shadow: 2px 2px 3px rgb(0, 0, 0);
     background: linear-gradient(to right, rgb(200, 70, 255), rgb(255, 0, 0), rgb(240, 8, 81), rgb(255, 230, 0));
     transform: scale(1.0);
 }
@@ -247,6 +248,7 @@
 }
 .online-feb-face a:hover {
     color: white;
+    box-shadow: 2px 2px 3px rgb(0, 0, 0);
     background-color: rgb(72, 67, 219);
     transform: scale(1.0);
 }
@@ -260,6 +262,7 @@
 }
 .online-feb-tiwi a:hover {
     color: white;
+    box-shadow: 2px 2px 3px rgb(0, 0, 0);
     background-color: rgb(9, 164, 236);
     transform: scale(1.0);
 }
@@ -273,6 +276,7 @@
 }
 .online-feb-linked a:hover {
     color: white;
+    box-shadow: 2px 2px 3px rgb(0, 0, 0);
     background-color: rgb(72, 67, 219);
     transform: scale(1.0);
 }
