--- a/furni-css/style.css
+++ b/furni-css/style.css
@@ -1099,7 +1099,7 @@ img.vert-move {
 }
 .unicon-icon i{
     color: #fb5f3c;
-    font-size: large;
+    font-size: 19px;
 }
 .unicon-icon {
     border-radius: 15px;
